{
    "version": 1,
    "name": "PlayerInputStandard",
    "maps": [
        {
            "name": "Standard",
            "id": "76d039d7-820d-4e67-8a0f-bb6d22e9a919",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "e13a08d6-e883-40e0-bcc9-b44f59271ca0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryInteract",
                    "type": "Button",
                    "id": "03434c68-1914-486d-b60e-cdfb10cc4009",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryInteract",
                    "type": "Button",
                    "id": "c3e37d39-b08d-4976-8631-b2700f5d18ed",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InventoryOpen",
                    "type": "Button",
                    "id": "63e9cf76-2937-4335-81de-df6dc2f70514",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InventoryClose",
                    "type": "Button",
                    "id": "ca08d8d6-fd93-4fbf-8f0e-8d67337545f4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HighlightAllInteractables",
                    "type": "PassThrough",
                    "id": "78cbe8f8-a095-49d0-840d-b61e0d8e50f8",
                    "expectedControlType": "DiscreteButton",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "49e48028-fa5b-4026-b2c9-3e89779455ee",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9ccc2db5-f4ec-4f4e-b92c-d4f6a4664ae0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "563c4ec2-a1c6-45e5-a029-4105af01a00a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "76e2067b-1e45-4a33-985f-7d0054342cb3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a6e3598b-4469-4f12-8bc8-5f9cdc28aba8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0ee9b3f3-959b-4110-9002-5e7336950440",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55d814fb-ad53-4ecc-9248-50fe2e446f77",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "857da9e7-f28f-4ff3-9bec-2c7d4b2c1157",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InventoryOpen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50a3c2b7-d577-4a5b-8979-fa3a68039e8d",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InventoryClose",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bdf48e5d-9ad1-40e8-9489-8b2be2847146",
                    "path": "<Keyboard>/space",
                    "interactions": "Hold(duration=1E+30)",
                    "processors": "",
                    "groups": "",
                    "action": "HighlightAllInteractables",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MousePosition",
            "id": "e50a5665-9628-44c3-b4f9-582b8c7a2641",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "PassThrough",
                    "id": "04ed4c0f-e285-4ae7-abd2-0dae2fdc18d8",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3b60c309-4b8c-4163-92c6-0e75139ca5c5",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}